# ehbc

./: .gitignore  .gitmodules  README.md  pattern_checker.sh
CPLDProg/: CPLDProg.kicad_pro  CPLDProg.kicad_sch  sym-lib-table
EHBCSimpleEmu/: Makefile  README.md
EHBCSimpleEmu/include/: cfgfile.h  common.h  compat.h  dbgutils.h  defs.h  emulator.h  error.h  log.h  params.h  types.h
EHBCSimpleEmu/rsrc/: ehbc.cfg
EHBCSimpleEmu/src/: dbgutils.c  emulator.c  error.c  log.c  main.c  params.c
cpld_fpga/cdc/: ack_controller.vhd  addr_decoder.vhd  amux.bsf  amux.vhd  amux_syn.v  badec.vhd  cache_controller.vhd  cdc.bdf  cdc.qpf  (+23 more)
docs/: .gitignore  CDC Register Table.xlsx  PEP_STM32.xlsx  STM32_Pinout.csv  doctemplate.dotx  whitepaper.docx
faststrswitch/: .gitignore  README.md  fss.c
fwcode/: .gitignore  Makefile  README.md  runfw.sh
glyphromgenerator/: GlyphBinFileFormat.txt  main.py
kicad/: migrate_from_snapeda.sh  pinmacro.py
m68k-hbc/: ADDEC.kicad_sch  CS4231A.kicad_sym  DS1000.kicad_sym  EISA.kicad_sch  EPBus.kicad_sym  Ethernet.kicad_sch  FWMC.kicad_sym  FWMEM.kicad_sch  IDC_SpecialPurpose.kicad_sym  MC68440FN.kicad_sym  MC68450R.kicad_sym  PC8477BV.kicad_sym  PEP.kicad_sch  PIC.kicad_sch  Power.kicad_sch  SIMM72.kicad_sym  VT82C42.kicad_sym  fp-lib-table  m68k-hbc.kicad_pcb  m68k-hbc.kicad_pro  sym-lib-table
mkimg/: .gitignore  CMakeLists.txt  example.mkimg.json
mkimg/include/: mkimg.h
mkimg/src/: fastkwd.c  mkimg.c
vhds/: runsim.sh
videocard/: CY7C1041D.kicad_sym  sym-lib-table  videocard.kicad_pcb  videocard.kicad_pro  videocard.kicad_sch
(+294 files in other folders)
